[package]
name = "food_prep"
version = "0.1.0"
authors = ["Nathan McCarty <nathan@mccarty.io>"]

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.0"
rand = "0.4.2"
[dependencies.hyper]
version = "0.9"
default-features = false
[dependencies.rustful]
version = "0.9"
default-features = false
